# live_illustrate

./: LICENSE  README.md  pyproject.toml  requirements.txt  transcribe.py  transcribe_2.py
.github/workflows/: linting.yml  python-publish.yml
live_illustrate/: __main__.py  prompts.py  render.py  serve.py  session_data.py  summarize.py  text_buffer.py  transcribe.py  util.py
live_illustrate/prompts/: image_extra.txt  summary.txt
live_illustrate/templates/: index.html
templates/: index.html
